--- a/app.json
+++ b/app.json
@@ -34,7 +34,7 @@
         {"url": "https://github.com/rking32/heroku-buildpack-chromedriver"},
         {"url": "https://github.com/chrismytton/heroku-buildpack-jq.git"},
         {"url": "https://github.com/heroku/heroku-buildpack-apt.git"},
-        {"url": "heroku/python"}
+        {"url": "heroku/nodejs"}
     ],
     "formation": {
         "worker": {
