--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
         {"url": "heroku/nodejs"}
     ],
     "formation": {
-        "worker": {
+        "web": {
             "quantity": 1,
             "size": "free"
         }
